remove all Guava usages